--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
         <p class="lead">We are a student-led organization to  contribute to and engage students in Linux &amp; open source.</p>
         <hr class="lead-4" />
         <p>Work on projects and discuss interesting topics in the Linux &amp; open source communities.</p>
-        <p>Weekly meetings every {{ site.ritlug-day }}, from {{ site.ritlug-time }}.</p>
+        <p>Weekly meetings every {{ site.umbclug-day }}, from {{ site.umbclug-time }}, at {{ site.umbclug-place }}.</p>
     </div>
 </section>
 
