remove some get-involved stuff that we can't do

--- a/get-involved.html
+++ b/get-involved.html
@@ -3,6 +3,7 @@ layout: page
 title: Get Involved
 ---
 
+(this page needs an overhaul)
 <section class="container">
     <div class="row" style="margin-bottom:-1.2em;">
         <div class="col-12 col-md-6 p-2" style="margin-bottom:1.2em;">
@@ -75,29 +76,7 @@ title: Get Involved
     </div>
 </section>
 
-<section id="do-stuff" class="container">
-    <div class="row" style="margin-bottom:-1.2em;">
-        <div class="col-12 col-md-6" style="margin-bottom:1.2em;">
-            <h2>Chat</h2>
-            <div class="list-group">
-                <a href="{{site.social.discord}}" class="list-group-item list-group-item-action">Discord</a>
-                <a href="{{site.social.mailinglist}}" class="list-group-item list-group-item-action">Mailing List (Google Group)</a>
-                <a href="{{site.social.irc}}" class="list-group-item list-group-item-action"><code>#ritlug</code> on IRC</a>
-                <a href="https://twitter.com/RITlug" class="list-group-item list-group-item-action">Twitter</a>
-            </div>
-        </div>
-        <div class="col-12 col-md-6" style="margin-bottom:1.2em;">
-            <h2>Stay Updated</h2>
-            <div class="list-group">
-                <a href="https://campusgroups.rit.edu/student_community?club_id=16071" class="list-group-item list-group-item-action">RIT CampusGroups (Join if you have an RIT account)</a>
-                <a href="/feeds/latest.xml" class="list-group-item list-group-item-action">RSS Announcements Feed</a>
-                <a href="/feeds/talks.xml" class="list-group-item list-group-item-action">RSS feed for RITlug talks</a>
-                <a href="/feeds/calendar.ics" class="list-group-item list-group-item-action">iCal Calendar Feed</a>
-            </div>
-        </div>
-    </div>
-</section>
 
 <h2>Questions?</h2>
-<p>Looking for more information? Contact us via <a href="mailto:{{ site.email }}">email</a> , Discord or IRC.</p>
+<p>Looking for more information? Contact us via <a href="mailto:{{ site.email }}">email</a> or on our Discord.</p>
 
